--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <div class="search-bar">
         <input type="search" placeholder="search" class="topcoat-search-input search-key">
     </div>
-    <div class="topcoat-list__container">
+    <div class="topcoat-list__container scroller">
         <ul class="topcoat-list list employee-list"></ul>
     </div>
 </script>
@@ -40,6 +40,7 @@
 <script src="lib/fastclick.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="js/adapters/localstorage-adapter.js"></script>
+<script src="js/HomeView.js"></script>
 <script src="js/app.js"></script>
 
 </body>
